# internal/chat_service/models/errors.go
@@ -3,7 +3,8 @@ package models
 import "errors"
 
 var (
-	ErrNotFoundFriend= errors.New("friend not found")
-	ErrGetMessageFailed = errors.New("failed to save a friend's message")
+	ErrNotFoundNickname= errors.New("nickname not found")
+	ErrNotFoundFriend= errors.New("friend nickname not found")
+	ErrGetMessageFailed = errors.New("failed get message")
 	ErrWriteFriendFailed = errors.New("failed to save a friend's message")
 )
