# internal/friends_service/models/errors.go
@@ -3,7 +3,10 @@ package models
 import "errors"
 
 var (
-	ErrNotFoundFriend= errors.New("friend not found")
-	ErrGetMessageFailed = errors.New("failed to save a friend's message")
-	ErrWriteFriendFailed = errors.New("failed to save a friend's message")
+	ErrNotFoundNickname= errors.New("nickname not found")
+	ErrNotFoundFriend= errors.New("friend nickname not found")
+	ErrAddFailed = errors.New("couldn't add a friend")
+	ErrRemoveFailed = errors.New("couldn't remuve a friend")
+	ErrConfirmFailed = errors.New("the friendship request could not be confirmed or rejected")
+	ErrGetListFailed = errors.New("failed get list")
 )
